# my_hunter

./: .gitignore  CMakeLists.txt  Makefile  icon.rc
include/: function.h  global.h  global2.h  macros.h  structs.h
lib/my/: Makefile
lib/my/includes/: flags.h
lib/my/sources/: my_putfloat.c  my_putnbr_base.c  my_strstr.c
src/: bonus.c  change_menus.c  change_sprites.c  combo.c  draw_bg.c  duck_death.c  events.c  game_over.c  intro.c  main.c  menu.c  modify_duck_speed.c  modify_mouse_pos.c  my_hunter.c  reset_sprite_pos.c  save_score.c  score.c  show_ammos.c  sound.c  sprites.c
